Fixed gesture scroll jump bug & shared element travel distance bug

--- a/example/src/css/Cards.css
+++ b/example/src/css/Cards.css
@@ -1,3 +1,6 @@
+.cards {
+  background-color: white;
+}
 .cards button {
   text-align: left;
 }
